--- a/main.css
+++ b/main.css
@@ -11,7 +11,7 @@ body{
 }
 
 header{
-    background-image: linear-gradient(rgba(0,0,0,0.6),rgba(0,0,0,0.6)),url('../images/header-img1.jpg');
+    background-image: linear-gradient(rgba(0,0,0,0.6),rgba(0,0,0,0.6)),url('header-img1.jpg');
     background-size: cover;
     background-repeat: no-repeat;
     height: 100vh;
